# needleman-wunsch

./: LICENSE.txt  README.md  alignment.txt  pyproject.toml  setup.cfg
data/: multi.fasta  protein.fasta  seq2.fasta
reports/: alignment.html  alignment.json  all_paths_report.txt  matrix.csv  protein.html  protein.json  protein_report.txt  report.txt
src/aligner/: cli.py  core.py  html_report.py  io.py  models.py  pdf_report.py  plot.py
tests/: test_cli.py  test_core.py  test_html_report.py  test_io.py  test_models.py  test_plot.py
