[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[metadata]
name = needleman-wunsch
version = 0.1.0
description = Needleman-Wunsch
license = MIT


[options]
package_dir = 
    = src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
controle_scripts = 
    needleman-wunsch = aligner.cli:main

[mypy]
mypy_path = src
ignore_missing_imports = True